# gauss-quad

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
benches/: bench_hermite.rs  bench_legendre.rs  benchmark.rs  hermite.rs  jacobi.rs  laguerre.rs  legendre.rs  midpoint.rs  parallel_memory_layout_benchmark.rs  simpson.rs
src/: data_api.rs  elementary.rs  gamma.rs  gaussian_quadrature.rs  golub_welsch.rs  lib.rs  math.rs
src/chebyshev/: mod.rs
src/hermite/: iterators.rs  mod.rs
src/jacobi/: iterators.rs  mod.rs
src/laguerre/: iterators.rs  mod.rs
src/legendre/: iterators.rs  mod.rs
src/legendre/bogaert/: data.rs  mod.rs
src/midpoint/: iterators.rs  mod.rs
src/romberg/: mod.rs
src/simpson/: iterators.rs  mod.rs
src/trapezoid/: mod.rs
