[package]
name = "gauss-quad"
version = "0.1.9"
authors = ["DomiDre <dominiquedresen@gmail.com>", "Johanna Sörngård <jsorngard@gmail.com>"]
keywords = ["gaussian", "quadrature", "numerics", "integration"]
categories = ["mathematics"]
edition = "2018"
description = "Library for applying Gaussian quadrature to integrate a function"
license = "MIT/Apache-2.0"
repository = "https://github.com/domidre/gauss-quad"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
nalgebra = "0.33"

[dev-dependencies]
approx = "0.5.1"
